Fixed background image stretching

--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,7 @@ body > .container {
 
 body {
   margin-bottom: 60px;
-  background: url('assets/images/background.png');
+  background: url('assets/images/background.png') no-repeat center center fixed;
   background-size: cover;
 }
 
